# aoc-2024

./: .gitignore  Cargo.toml  README.md  notes.md  profile.bash
.flox/: env.json
.flox/env/: manifest.toml
day1/: Cargo.toml
day1/benches/: day1.rs
day1/src/: lib.rs  main.rs
day1_naive/: Cargo.toml
day1_naive/benches/: benchmark.rs  day1_naive_benchmark.rs
day1_naive/src/: lib.rs  main.rs
day1_simd_parser/: Cargo.toml
day1_simd_parser/benches/: day1_simd_parser.rs  day1_simd_parser_benchmark.rs
day1_simd_parser/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/benches/: day2.rs
day2/src/: lib.rs  main.rs
parse_ints/: Cargo.toml
parse_ints/src/: lib.rs  scalar.rs  simd.rs
proptest-regressions/: parse_ints.txt
src/: day1.rs  lib.rs  parse_ints.rs
