[workspace]
members = [
  "parse_ints",
  "day1_naive",
  "day1_simd_parser",
]
default-members = [
  "day1_naive",
  "day1_simd_parser"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aoc-runner = "*"
aoc-runner-derive = "*"
proptest = "1"
proptest-derive = "0.5.0"
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"]}
