[workspace]
members = [
  "parse_ints",
  "day1",
  "day1_simd_parser",
  "day2",
]
default-members = [
  "parse_ints",
  "day1",
  "day1_simd_parser",
  "day2",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aoc-runner = "*"
aoc-runner-derive = "*"
proptest = "1"
proptest-derive = "0.5.0"
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"]}

[profile.profile]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = true
codegen-units = 1
strip = true
