[package]
name = "day1_simd_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "day1_simd_parser"
path = "src/lib.rs"

[[bin]]
name = "day1_simd_parser"
path = "src/main.rs"

[dependencies]
parse_ints = { path = "../parse_ints" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day1_simd_parser_benchmark"
harness = false
